[project]
name = "stm32loader"
description = "Flash firmware to STM32 microcontrollers using Python."
readme = "README.md"
authors = [
    {name = "jsnyder"},
    {name = "Floris Lambrechts", email = "florisla@gmail.com"},
]
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyserial",
    "progress",
]
version = "0.8.0"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
hex = [
    "intelhex",
]
lint = [
    "ruff",
    "pylint",
]
test = [
    "pytest",
    "intelhex",
]
dev = [
    { include-group = "test" },
    { include-group = "hex" },
    { include-group = "lint" },
    "bump-my-version",
    "cogapp",
    "nox>=2026.2.9",
    "nox-uv>=0.7.1",
]

[project.scripts]
stm32loader = "stm32loader.__main__:main"

[project.urls]
Home = "https://github.com/florisla/stm32loader"
BugTracker = "https://github.com/florisla/stm32loader/issues"
SourceCode = "https://github.com/florisla/stm32loader"


[tool.bumpversion]
current_version = "0.7.1-dev0"
commit = true
tag = true
message = "release: Bump version number from v{current_version} to v{new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(-(?P<release>[^\\d]+)(?P<devrelease>\\d+))?"
serialize = [
    "{major}.{minor}.{patch}-{release}{devrelease}",
    "{major}.{minor}.{patch}",
]

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
    "dev",
    "release",
]

[[tool.bumpversion.files]]
filename = "stm32loader/__init__.py"
parse = "\\((?P<major>\\d+),\\s(?P<minor>\\d+),\\s(?P<patch>\\d+)(\\s*,\\s*\"(?P<release>[^\"]+)\"\\s*,\\s*(?P<devrelease>\\d+))?\\)"
serialize = [
    "({major}, {minor}, {patch}, \"{release}\", {devrelease})",
    "({major}, {minor}, {patch})",
]
search = "__version_info__ = {current_version}"
replace = "__version_info__ = {new_version}"


[tool.ruff]
line-length = 98
target-version = "py39"
exclude = [
    ".git",
    ".idea",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort
# Replaces flake8 + flake8-isort; ruff format replaces black
select = ["E", "F", "W", "I"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 78

[tool.ruff.format]
docstring-code-format = true


[tool.pytest.ini_options]
addopts = "--strict-markers -m 'not (hardware or hardware_missing)'"
markers = [
    "hardware",
    "missing_hardware",
]
